# oml

./: .gitignore  Containerfile.bootc  Containerfile.modelcar  README.md  demo-mrintegration.ipynb  demo-pipeline.ipynb  demo.ipynb  enable-dashboard.sh  enable-modelcar.sh  isvc-modelcar.yaml  isvc-oci-artifact.yaml  mr-integration-compose.yaml  oci-artifact-csi.yaml  pyproject.toml
data/: input0.json  input1.json  input4.json
oml/: dispatcher.py  helpers.py  model_metadata.py  provider.py
quadlet/: sklearn.kube  sklearn.yaml
tests/: test_oml.py
