[tool.poetry]
name = "oml"
version = "0.1.0"
description = ""
authors = ["Matteo Mortari <matteo.mortari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
oras = "^0.1.30"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
